# bsc_thesis

./: .gitignore
demi_epoll/: CMakeLists.txt  JUSTFILE
demi_epoll/lib/include/: dpoll.h  log.h  sockets.h
demi_epoll/lib/src/: demi_socket.h  dpoll.c  epoll_wrapper.c  epoll_wrapper.h  impls.c  impls.h  log.c  socket_wrapper.c  socket_wrapper.h  utils.c  utils.h  wrappers.c
demi_epoll/lib/src/internals/: buffer.h  fd_manager.c  fd_manager.h  list.h  maybe.h  queue.h  tree.h
demi_epoll/test_exe/: main.c
demikernel-dev/: Cargo.toml  README.md  linux.mk  rust-toolchain  windows.mk
demikernel-dev/.github/workflows/: catnap.yml  catnapw.yml  catnip.yml  catpowder.yml
demikernel-dev/benchmarks/c/: main.c
demikernel-dev/doc/: building.md
demikernel-dev/dpdk_bindings/: Cargo.toml  README.md  build.rs  inlined.c
demikernel-dev/dpdk_bindings/src/: lib.rs
demikernel-dev/examples/rust/: tcp-push-pop.rs  udp-ping-pong.rs  udp-push-pop.rs
demikernel-dev/examples/tcp-close/: client.rs  server.rs
demikernel-dev/examples/tcp-echo/: client.rs  server.rs
demikernel-dev/examples/tcp-wait/: server.rs
demikernel-dev/include/demi/: cc.h  libos.h  types.h
demikernel-dev/network_simulator/: README.md
demikernel-dev/scripts/config/: azure.yaml  default.yaml
demikernel-dev/scripts/setup/: debian.sh
demikernel-dev/src/rust/: lib.rs
demikernel-dev/tests/c/: sizes.c
demikernel-dev/tests/rust/: tcp.rs  udp.rs
demikernel-dev/xdp_bindings/: Cargo.toml  README.md  inlined.c  wrapper.h
node-24.0.0/: configure.py  echo_server.js  static_http_server.js
(+106 files in other folders)
